feat: for geo/pays/{code}/suivants
and fix for  geo/pays/{code}/precedents
